3-2 CORS跨域请求的限制与解决: 配置可访问的白名单

--- a/test.html
+++ b/test.html
@@ -10,19 +10,18 @@
 
 <body>
   <h4>http server</h4>
-  <!-- <script>
+  <script>
     var xhr = new XMLHttpRequest();
     xhr.open('GET', 'http://127.0.0.1:8887');
     xhr.send();
-  </script> -->
+  </script>
 
-  <script>
+  <!-- <script>
     function callbackFun(res) {
       console.log('jsonp: ', res)
     }
   </script>
-  <script src="http://127.0.0.1:8887">
-  </script>
+  <script src="http://127.0.0.1:8887"></script> -->
 </body>
 
 </html>
