--- a/test.html
+++ b/test.html
@@ -11,9 +11,16 @@
 <body>
   <h4>http server</h4>
   <script>
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', 'http://127.0.0.1:8887');
-    xhr.send();
+    // var xhr = new XMLHttpRequest();
+    // xhr.open('GET', 'http://127.0.0.1:8887');
+    // xhr.send();
+
+    fetch('http://127.0.0.1:8887', {
+      method: 'PUT',
+      headers: {
+        'X-Test-Cors': 123
+      }
+    })
   </script>
 
   <!-- <script>
