3-4 缓存头Cache-Control的含义和使用

--- a/test.html
+++ b/test.html
@@ -10,18 +10,18 @@
 
 <body>
   <h4>http server</h4>
-  <script>
+  <!-- <script>
     // var xhr = new XMLHttpRequest();
     // xhr.open('GET', 'http://127.0.0.1:8887');
     // xhr.send();
 
-    fetch('http://127.0.0.1:8887', {
-      method: 'PUT',
-      headers: {
-        'X-Test-Cors': 123
-      }
-    })
-  </script>
+    // fetch('http://127.0.0.1:8887', {
+    //   method: 'PUT',
+    //   headers: {
+    //     'X-Test-Cors': 123
+    //   }
+    // })
+  </script> -->
 
   <!-- <script>
     function callbackFun(res) {
@@ -29,6 +29,8 @@
     }
   </script>
   <script src="http://127.0.0.1:8887"></script> -->
+
+  <script src="/script.js"></script>
 </body>
 
 </html>
